@@ -13,22 +13,24 @@ import java.util.stream.Collectors;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.LineString;
+import org.opentripplanner.api.support.SemanticHash;
 import org.opentripplanner.ext.legacygraphqlapi.LegacyGraphQLRequestContext;
+import org.opentripplanner.ext.legacygraphqlapi.LegacyGraphQLUtils;
 import org.opentripplanner.ext.legacygraphqlapi.generated.LegacyGraphQLDataFetchers;
 import org.opentripplanner.ext.legacygraphqlapi.generated.LegacyGraphQLTypes;
-import org.opentripplanner.model.TripPattern;
+import org.opentripplanner.framework.time.ServiceDateUtils;
 import org.opentripplanner.model.vehicle_position.RealtimeVehiclePosition;
 import org.opentripplanner.routing.RoutingService;
 import org.opentripplanner.routing.alertpatch.EntitySelector;
 import org.opentripplanner.routing.alertpatch.TransitAlert;
 import org.opentripplanner.routing.services.TransitAlertService;
-import org.opentripplanner.routing.trippattern.TripTimes;
 import org.opentripplanner.transit.model.framework.FeedScopedId;
 import org.opentripplanner.transit.model.network.Route;
+import org.opentripplanner.transit.model.network.TripPattern;
 import org.opentripplanner.transit.model.organization.Agency;
 import org.opentripplanner.transit.model.timetable.Trip;
+import org.opentripplanner.transit.model.timetable.TripTimes;
 import org.opentripplanner.transit.service.TransitService;
-import org.opentripplanner.util.time.ServiceDateUtils;
 
 public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.LegacyGraphQLPattern {
 
@@ -83,14 +85,12 @@ public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.Legac
                       .stream()
                       .anyMatch(entity ->
                         (
-                          entity instanceof EntitySelector.StopAndRoute &&
-                          ((EntitySelector.StopAndRoute) entity).stopAndRoute.routeOrTrip.equals(
-                              getRoute(environment).getId()
-                            )
+                          entity instanceof EntitySelector.StopAndRoute stopAndRoute &&
+                          stopAndRoute.routeId().equals(getRoute(environment).getId())
                         )
                       )
                   )
-                  .collect(Collectors.toList())
+                  .toList()
               );
               getSource(environment)
                 .getStops()
@@ -112,14 +112,12 @@ public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.Legac
                         .stream()
                         .anyMatch(entity ->
                           (
-                            entity instanceof EntitySelector.StopAndTrip &&
-                            ((EntitySelector.StopAndTrip) entity).stopAndTrip.routeOrTrip.equals(
-                                getSource(environment).getId()
-                              )
+                            entity instanceof EntitySelector.StopAndTrip stopAndTrip &&
+                            stopAndTrip.tripId().equals(getSource(environment).getId())
                           )
                         )
                     )
-                    .collect(Collectors.toList())
+                    .toList()
                 )
               );
               break;
@@ -159,7 +157,8 @@ public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.Legac
 
   @Override
   public DataFetcher<String> headsign() {
-    return environment -> getSource(environment).getTripHeadsign();
+    return environment ->
+      LegacyGraphQLUtils.getTranslation(getSource(environment).getTripHeadsign(), environment);
   }
 
   @Override
@@ -185,7 +184,7 @@ public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.Legac
 
   @Override
   public DataFetcher<String> semanticHash() {
-    return environment -> getSource(environment).semanticHashString(null);
+    return environment -> SemanticHash.forTripPattern(getSource(environment), null);
   }
 
   @Override
@@ -208,7 +207,7 @@ public class LegacyGraphQLPatternImpl implements LegacyGraphQLDataFetchers.Legac
 
       try {
         TIntSet services = getTransitService(environment)
-          .getServicesRunningForDate(ServiceDateUtils.parseString(serviceDate));
+          .getServiceCodesRunningForDate(ServiceDateUtils.parseString(serviceDate));
         return getSource(environment)
           .getScheduledTimetable()
           .getTripTimes()
