@@ -2,34 +2,38 @@ package org.opentripplanner.ext.vectortiles.layers.stops;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
-import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
-import org.opentripplanner.common.model.T2;
-import org.opentripplanner.ext.vectortiles.PropertyMapper;
-import org.opentripplanner.model.TripPattern;
-import org.opentripplanner.routing.vertextype.TransitStopVertex;
-import org.opentripplanner.transit.model.site.Stop;
+import org.opentripplanner.api.mapping.I18NStringMapper;
+import org.opentripplanner.api.mapping.PropertyMapper;
+import org.opentripplanner.inspector.vector.KeyValue;
+import org.opentripplanner.transit.model.network.TripPattern;
+import org.opentripplanner.transit.model.site.RegularStop;
 import org.opentripplanner.transit.service.TransitService;
 
-public class DigitransitStopPropertyMapper extends PropertyMapper<TransitStopVertex> {
+public class DigitransitStopPropertyMapper extends PropertyMapper<RegularStop> {
 
   private final TransitService transitService;
+  private final I18NStringMapper i18NStringMapper;
 
-  private DigitransitStopPropertyMapper(TransitService transitService) {
+  private DigitransitStopPropertyMapper(TransitService transitService, Locale locale) {
     this.transitService = transitService;
+    this.i18NStringMapper = new I18NStringMapper(locale);
   }
 
-  public static DigitransitStopPropertyMapper create(TransitService transitService) {
-    return new DigitransitStopPropertyMapper(transitService);
+  protected static DigitransitStopPropertyMapper create(
+    TransitService transitService,
+    Locale locale
+  ) {
+    return new DigitransitStopPropertyMapper(transitService, locale);
   }
 
   @Override
-  public Collection<T2<String, Object>> map(TransitStopVertex input) {
-    Stop stop = input.getStop();
+  protected Collection<KeyValue> map(RegularStop stop) {
     Collection<TripPattern> patternsForStop = transitService.getPatternsForStop(stop);
 
     String type = patternsForStop
@@ -43,33 +47,29 @@ public class DigitransitStopPropertyMapper extends PropertyMapper<TransitStopVer
       .map(Enum::name)
       .orElse(null);
 
-    String patterns = JSONArray.toJSONString(
-      patternsForStop
+    String routes = JSONArray.toJSONString(
+      transitService
+        .getRoutesForStop(stop)
         .stream()
-        .map(tripPattern -> {
-          String headsign = tripPattern.getStopHeadsign(tripPattern.findStopPosition(stop));
-          JSONObject pattern = new JSONObject();
-          pattern.put("headsign", Optional.ofNullable(headsign).orElse(""));
-          pattern.put("type", tripPattern.getRoute().getMode().name());
-          pattern.put("shortName", tripPattern.getRoute().getShortName());
-          return pattern;
+        .map(route -> {
+          JSONObject routeObject = new JSONObject();
+          routeObject.put("gtfsType", route.getGtfsType());
+          return routeObject;
         })
-        .collect(Collectors.toList())
+        .toList()
     );
-    String desc = stop.getDescription() != null ? stop.getDescription().toString() : null;
     return List.of(
-      new T2<>("gtfsId", stop.getId().toString()),
-      // Name is I18NString now, we return default name
-      new T2<>("name", stop.getName().toString()),
-      new T2<>("code", stop.getCode()),
-      new T2<>("platform", stop.getPlatformCode()),
-      new T2<>("desc", desc),
-      new T2<>(
+      new KeyValue("gtfsId", stop.getId().toString()),
+      new KeyValue("name", i18NStringMapper.mapNonnullToApi(stop.getName())),
+      new KeyValue("code", stop.getCode()),
+      new KeyValue("platform", stop.getPlatformCode()),
+      new KeyValue("desc", i18NStringMapper.mapToApi(stop.getDescription())),
+      new KeyValue(
         "parentStation",
         stop.getParentStation() != null ? stop.getParentStation().getId() : "null"
       ),
-      new T2<>("type", type),
-      new T2<>("patterns", patterns)
+      new KeyValue("type", type),
+      new KeyValue("routes", routes)
     );
   }
 }
