@@ -1,34 +1,28 @@
 package org.opentripplanner.smoketest;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.JsonDeserializer;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.module.SimpleModule;
 import com.fasterxml.jackson.module.paramnames.ParameterNamesModule;
-import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse.BodyHandlers;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.temporal.TemporalAdjusters;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Set;
 import org.opentripplanner.api.json.JSONObjectMapperProvider;
 import org.opentripplanner.api.model.ApiItinerary;
-import org.opentripplanner.api.resource.TripPlannerResponse;
-import org.opentripplanner.routing.core.Fare;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.opentripplanner.framework.geometry.WgsCoordinate;
+import org.opentripplanner.routing.core.ItineraryFares;
+import org.opentripplanner.smoketest.util.GraphQLClient;
+import org.opentripplanner.smoketest.util.RestClient;
+import org.opentripplanner.smoketest.util.SmokeTestRequest;
 
 /**
  * This is both a utility class and a category to select or deselect smoke tests during test
@@ -36,32 +30,17 @@ import org.slf4j.LoggerFactory;
  * <p>
  * By default, the smoke tests are not run when you execute `mvn test`.
  * <p>
- * If you want run them, use `mvn test -P smoke-tests`.
+ * If you want run them, use `mvn test -Djunit.tags.included="atlanta" -Djunit.tags.excluded=""`.
  */
 public class SmokeTest {
 
-  static final Logger LOG = LoggerFactory.getLogger(SmokeTest.class);
-  static HttpClient client = HttpClient.newHttpClient();
-  static final ObjectMapper mapper;
-
-  /**
-   * The Fare class is a little hard to deserialize so we have a custom deserializer as we don't
-   * run any assertions against the fares. (That is done during unit tests.)
-   */
-  static class FareDeserializer extends JsonDeserializer<Fare> {
-
-    @Override
-    public Fare deserialize(JsonParser jsonParser, DeserializationContext deserializationContext)
-      throws IOException, JsonProcessingException {
-      return null;
-    }
-  }
+  public static final ObjectMapper mapper;
 
   static {
     var provider = new JSONObjectMapperProvider();
 
     SimpleModule module = new SimpleModule("SmokeTests");
-    module.addDeserializer(Fare.class, new FareDeserializer());
+    module.addDeserializer(ItineraryFares.class, new FareDeserializer());
 
     mapper = provider.getContext(null);
     mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
@@ -75,52 +54,17 @@ public class SmokeTest {
    * When we approach the end of the validity of the GTFS feed there might be days when this logic
    * results in failures as the next Monday is after the end of the service period.
    * <p>
-   * This is a problem in particular in the case of MARTA as they only publish new data about 2
-   * days before the expiration date of the old one.
+   * This is a problem in particular in the case of MARTA as they only publish new data about 2 days
+   * before the expiration date of the old one.
    */
-  static LocalDate nextMonday() {
+  public static LocalDate nextMonday() {
     var today = LocalDate.now();
-    return today.with(TemporalAdjusters.next(DayOfWeek.MONDAY));
+    return today.with(TemporalAdjusters.next(DayOfWeek.FRIDAY));
   }
 
-  /**
-   * Builds an HTTP request for sending to an OTP instance.
-   */
-  static HttpRequest buildPlanRequest(Map<String, String> params) {
-    var urlParams = params
-      .entrySet()
-      .stream()
-      .map(kv -> kv.getKey() + "=" + kv.getValue())
-      .collect(Collectors.joining("&"));
-
-    var uri = URI.create("http://localhost:8080/otp/routers/default/plan?" + urlParams);
-
-    return HttpRequest.newBuilder().uri(uri).GET().build();
-  }
-
-  /**
-   * Sends an HTTP request to the OTP plan endpoint and deserializes the response.
-   */
-  static TripPlannerResponse sendPlanRequest(Map<String, String> params) {
-    var request = SmokeTest.buildPlanRequest(params);
-    LOG.info("Sending request to {}", request.uri());
-    TripPlannerResponse otpResponse;
-    try {
-      var response = client.send(request, BodyHandlers.ofInputStream());
-
-      assertEquals(200, response.statusCode(), "Status code returned by OTP server was not 200");
-      otpResponse = SmokeTest.mapper.readValue(response.body(), TripPlannerResponse.class);
-    } catch (IOException | InterruptedException e) {
-      throw new RuntimeException(e);
-    }
-
-    LOG.info(
-      "Request to {} returned {} itineraries",
-      request.uri(),
-      otpResponse.getPlan().itineraries.size()
-    );
-
-    return otpResponse;
+  public static void assertThatThereAreVehicleRentalStations() {
+    var stations = GraphQLClient.vehicleRentalStations();
+    assertFalse(stations.isEmpty(), "Found no vehicle rental stations.");
   }
 
   /**
@@ -133,8 +77,8 @@ public class SmokeTest {
   ) {
     var itineraryModes = itineraries
       .stream()
-      .map(i -> i.legs.stream().map(l -> l.mode).collect(Collectors.toList()))
-      .collect(Collectors.toList());
+      .map(i -> i.legs.stream().map(l -> l.mode).toList())
+      .toList();
     assertTrue(
       itineraryModes.contains(expectedModes),
       String.format(
@@ -143,5 +87,50 @@ public class SmokeTest {
         itineraryModes
       )
     );
+  }
+
+  static void basicRouteTest(
+    WgsCoordinate start,
+    WgsCoordinate end,
+    Set<String> modes,
+    List<String> expectedModes
+  ) {
+    var request = new SmokeTestRequest(start, end, modes);
+    var otpResponse = RestClient.sendPlanRequest(request);
+    var itineraries = otpResponse.getPlan().itineraries;
+
+    assertTrue(itineraries.size() >= 1);
+
+    assertThatItineraryHasModes(itineraries, expectedModes);
+  }
+
+  static void assertThereArePatternsWithVehiclePositions() {
+    GraphQLClient.VehiclePositionResponse positions = GraphQLClient.patternWithVehiclePositionsQuery();
+
+    var vehiclePositions = positions
+      .patterns()
+      .stream()
+      .flatMap(p -> p.vehiclePositions().stream())
+      .toList();
+
+    assertFalse(
+      vehiclePositions.isEmpty(),
+      "Found no patterns that have realtime vehicle positions."
+    );
+  }
+
+  /**
+   * The Fare class is a little hard to deserialize, so we have a custom deserializer as we don't
+   * run any assertions against the fares. (That is done during unit tests.)
+   */
+  static class FareDeserializer extends JsonDeserializer<ItineraryFares> {
+
+    @Override
+    public ItineraryFares deserialize(
+      JsonParser jsonParser,
+      DeserializationContext deserializationContext
+    ) {
+      return null;
+    }
   }
 }
